Updates the breadcrumb component with the new system logic.

--- a/tests/index.html
+++ b/tests/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
-        <link async rel="stylesheet" href="/../cache/styles/h2-component-breadcrumb.css">
+        <link async rel="stylesheet" href="h2-component-breadcrumb.css">
     </head>
-    <body data-h2-enabled>
+    <body>
         <div style="padding: 5rem 0 5rem 0; margin: 0 auto; max-width: 60rem; width: 90%">
             <h1>Breadcrumb</h1>
             <h2>Black Test</h2>
             <nav 
                 aria-label="breadcrumb" 
-                data-h2-breadcrumb="black">
+                data-h2-breadcrumb-$H2VER="black">
                 <ol data-h2-breadcrumb-list>
                     <li data-h2-breadcrumb-list-item>
                         <a 
@@ -35,7 +35,7 @@
             <h2>Color Test</h2>
             <nav 
                 aria-label="breadcrumb" 
-                data-h2-breadcrumb="c1">
+                data-h2-breadcrumb-$H2VER="c1">
                 <ol data-h2-breadcrumb-list>
                     <li data-h2-breadcrumb-list-item>
                         <a 
@@ -81,6 +81,7 @@
                 </ol>
             </nav>
         </div>
-        <script src="/../cache/scripts/h2-component-breadcrumb.js"></script>
+        <script src="cash.min.js"></script>
+        <script src="h2-component-breadcrumb.js"></script>
     </body>
 </html>
