Updates breadcrumbs to stop using Cash and prefer vanilla JS in preparation for React support.

--- a/tests/index.html
+++ b/tests/index.html
@@ -8,7 +8,7 @@
             <h2>Black Test</h2>
             <nav 
                 aria-label="breadcrumb" 
-                data-h2-breadcrumb-$H2VER="black">
+                data-h2-breadcrumb_VERSION="black">
                 <ol data-h2-breadcrumb-list>
                     <li data-h2-breadcrumb-list-item>
                         <a 
@@ -35,7 +35,7 @@
             <h2>Color Test</h2>
             <nav 
                 aria-label="breadcrumb" 
-                data-h2-breadcrumb-$H2VER="c1">
+                data-h2-breadcrumb_VERSION="c1">
                 <ol data-h2-breadcrumb-list>
                     <li data-h2-breadcrumb-list-item>
                         <a 
