--- a/tests/index.html
+++ b/tests/index.html
@@ -1,87 +1,94 @@
 <html>
-    <head>
-        <link async rel="stylesheet" href="h2-component-breadcrumb.css">
-    </head>
-    <body>
-        <div style="padding: 5rem 0 5rem 0; margin: 0 auto; max-width: 60rem; width: 90%">
-            <h1>Breadcrumb</h1>
-            <h2>Black Test</h2>
-            <nav 
-                aria-label="breadcrumb" 
-                data-h2-breadcrumb_VERSION="black">
-                <ol data-h2-breadcrumb-list>
-                    <li data-h2-breadcrumb-list-item>
-                        <a 
-                            data-h2-breadcrumb-link
-                            href="#link-to-page" 
-                            title="This is the title of the page link.">Page Link 01</a>
-                        <span data-h2-breadcrumb-divider>&#47;</span>
-                    </li>
-                    <li data-h2-breadcrumb-list-item>
-                        <a 
-                            data-h2-breadcrumb-link
-                            href="#link-to-page" 
-                            title="This is the title of the page link.">Page Link 02</a>
-                        <span data-h2-breadcrumb-divider>&#47;</span>
-                    </li>
-                    <li data-h2-breadcrumb-list-item>
-                        <span 
-                            aria-current="page"
-                            data-h2-breadcrumb-link>Page Link 03</span>
-                        <span data-h2-breadcrumb-divider>&#47;</span>
-                    </li>
-                </ol>
-            </nav>
-            <h2>Color Test</h2>
-            <nav 
-                aria-label="breadcrumb" 
-                data-h2-breadcrumb_VERSION="c1">
-                <ol data-h2-breadcrumb-list>
-                    <li data-h2-breadcrumb-list-item>
-                        <a 
-                            data-h2-breadcrumb-link
-                            href="#link-to-page" 
-                            title="This is the title of the page link.">Page Link 01</a>
-                        <span data-h2-breadcrumb-divider>&gt;</span>
-                    </li>
-                    <li data-h2-breadcrumb-list-item>
-                        <a 
-                            data-h2-breadcrumb-link
-                            href="#link-to-page" 
-                            title="This is the title of the page link.">Page Link 02</a>
-                        <span data-h2-breadcrumb-divider>&gt;</span>
-                    </li>
-                    <li data-h2-breadcrumb-list-item>
-                        <a 
-                            data-h2-breadcrumb-link
-                            href="#link-to-page" 
-                            title="This is the title of the page link.">Page Link 03</a>
-                        <span data-h2-breadcrumb-divider>&gt;</span>
-                    </li>
-                    <li data-h2-breadcrumb-list-item>
-                        <a 
-                            data-h2-breadcrumb-link
-                            href="#link-to-page" 
-                            title="This is the title of the page link.">Page Link 04</a>
-                        <span data-h2-breadcrumb-divider>&gt;</span>
-                    </li>
-                    <li data-h2-breadcrumb-list-item>
-                        <a 
-                            data-h2-breadcrumb-link
-                            href="#link-to-page" 
-                            title="This is the title of the page link.">Page Link 05</a>
-                        <span data-h2-breadcrumb-divider>&gt;</span>
-                    </li>
-                    <li data-h2-breadcrumb-list-item>
-                        <span 
-                            aria-current="page"
-                            data-h2-breadcrumb-link>Page Link 06</span>
-                        <span data-h2-breadcrumb-divider>&gt;</span>
-                    </li>
-                </ol>
-            </nav>
-        </div>
-        <script src="cash.min.js"></script>
-        <script src="h2-component-breadcrumb.js"></script>
-    </body>
+  <head>
+    <!-- Charset -->
+    <meta charset="utf-8" />
+    <!-- Compatibility -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS -->
+    <link async rel="stylesheet" href="h2-component-breadcrumb.css">
+  </head>
+  <body>
+    <div style="padding: 5rem 0 5rem 0; margin: 0 auto; max-width: 60rem; width: 90%">
+        <h1>Breadcrumb</h1>
+        <h2>Black Test</h2>
+        <nav 
+            aria-label="breadcrumb" 
+            data-h2-breadcrumb_VERSION="black">
+            <ol data-h2-breadcrumb-list>
+                <li data-h2-breadcrumb-list-item>
+                    <a 
+                        data-h2-breadcrumb-link
+                        href="#link-to-page" 
+                        title="This is the title of the page link.">Page Link 01</a>
+                    <span data-h2-breadcrumb-divider>&#47;</span>
+                </li>
+                <li data-h2-breadcrumb-list-item>
+                    <a 
+                        data-h2-breadcrumb-link
+                        href="#link-to-page" 
+                        title="This is the title of the page link.">Page Link 02</a>
+                    <span data-h2-breadcrumb-divider>&#47;</span>
+                </li>
+                <li data-h2-breadcrumb-list-item>
+                    <span 
+                        aria-current="page"
+                        data-h2-breadcrumb-link>Page Link 03</span>
+                    <span data-h2-breadcrumb-divider>&#47;</span>
+                </li>
+            </ol>
+        </nav>
+        <h2>Color Test</h2>
+        <nav 
+            aria-label="breadcrumb" 
+            data-h2-breadcrumb_VERSION="c1">
+            <ol data-h2-breadcrumb-list>
+                <li data-h2-breadcrumb-list-item>
+                    <a 
+                        data-h2-breadcrumb-link
+                        href="#link-to-page" 
+                        title="This is the title of the page link.">Page Link 01</a>
+                    <span data-h2-breadcrumb-divider>&gt;</span>
+                </li>
+                <li data-h2-breadcrumb-list-item>
+                    <a 
+                        data-h2-breadcrumb-link
+                        href="#link-to-page" 
+                        title="This is the title of the page link.">Page Link 02</a>
+                    <span data-h2-breadcrumb-divider>&gt;</span>
+                </li>
+                <li data-h2-breadcrumb-list-item>
+                    <a 
+                        data-h2-breadcrumb-link
+                        href="#link-to-page" 
+                        title="This is the title of the page link.">Page Link 03</a>
+                    <span data-h2-breadcrumb-divider>&gt;</span>
+                </li>
+                <li data-h2-breadcrumb-list-item>
+                    <a 
+                        data-h2-breadcrumb-link
+                        href="#link-to-page" 
+                        title="This is the title of the page link.">Page Link 04</a>
+                    <span data-h2-breadcrumb-divider>&gt;</span>
+                </li>
+                <li data-h2-breadcrumb-list-item>
+                    <a 
+                        data-h2-breadcrumb-link
+                        href="#link-to-page" 
+                        title="This is the title of the page link.">Page Link 05</a>
+                    <span data-h2-breadcrumb-divider>&gt;</span>
+                </li>
+                <li data-h2-breadcrumb-list-item>
+                    <span 
+                        aria-current="page"
+                        data-h2-breadcrumb-link>Page Link 06</span>
+                    <span data-h2-breadcrumb-divider>&gt;</span>
+                </li>
+            </ol>
+        </nav>
+    </div>
+    <script src="cash.min.js"></script>
+    <script src="h2-component-breadcrumb.js"></script>
+  </body>
 </html>
