Updates the core and rewrites the build scripts to better reflect the system, imports, and compiled files.

--- a/tests/index.html
+++ b/tests/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <!-- Charset -->
@@ -7,7 +8,7 @@
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link async rel="stylesheet" href="h2-component-breadcrumb.css">
+    <link async rel="stylesheet" href="breadcrumb.css">
   </head>
   <body>
     <div style="padding: 5rem 0 5rem 0; margin: 0 auto; max-width: 60rem; width: 90%">
@@ -88,7 +89,6 @@
             </ol>
         </nav>
     </div>
-    <script src="cash.min.js"></script>
-    <script src="h2-component-breadcrumb.js"></script>
+    <script src="breadcrumb.js"></script>
   </body>
 </html>
