--- a/tests/index.html
+++ b/tests/index.html
@@ -43,7 +43,54 @@
         <h2>Color Test</h2>
         <nav 
             aria-label="breadcrumb" 
-            data-h2-breadcrumb_VERSION="c1">
+            data-h2-breadcrumb_VERSION="theme-1-light">
+            <ol data-h2-breadcrumb-list>
+                <li data-h2-breadcrumb-list-item>
+                    <a 
+                        data-h2-breadcrumb-link
+                        href="#link-to-page" 
+                        title="This is the title of the page link.">Page Link 01</a>
+                    <span data-h2-breadcrumb-divider>&gt;</span>
+                </li>
+                <li data-h2-breadcrumb-list-item>
+                    <a 
+                        data-h2-breadcrumb-link
+                        href="#link-to-page" 
+                        title="This is the title of the page link.">Page Link 02</a>
+                    <span data-h2-breadcrumb-divider>&gt;</span>
+                </li>
+                <li data-h2-breadcrumb-list-item>
+                    <a 
+                        data-h2-breadcrumb-link
+                        href="#link-to-page" 
+                        title="This is the title of the page link.">Page Link 03</a>
+                    <span data-h2-breadcrumb-divider>&gt;</span>
+                </li>
+                <li data-h2-breadcrumb-list-item>
+                    <a 
+                        data-h2-breadcrumb-link
+                        href="#link-to-page" 
+                        title="This is the title of the page link.">Page Link 04</a>
+                    <span data-h2-breadcrumb-divider>&gt;</span>
+                </li>
+                <li data-h2-breadcrumb-list-item>
+                    <a 
+                        data-h2-breadcrumb-link
+                        href="#link-to-page" 
+                        title="This is the title of the page link.">Page Link 05</a>
+                    <span data-h2-breadcrumb-divider>&gt;</span>
+                </li>
+                <li data-h2-breadcrumb-list-item>
+                    <span 
+                        aria-current="page"
+                        data-h2-breadcrumb-link>Page Link 06</span>
+                    <span data-h2-breadcrumb-divider>&gt;</span>
+                </li>
+            </ol>
+        </nav>
+        <nav 
+            aria-label="breadcrumb" 
+            data-h2-breadcrumb_VERSION="gray-1">
             <ol data-h2-breadcrumb-list>
                 <li data-h2-breadcrumb-list-item>
                     <a 
